# django-devconatiner

./: .dockerignore  .gitignore  Dockerfile  Tiltfile  pylama.ini  pyproject.toml  pyrightconfig.json  pytest.ini
.devcontainer/: devcontainer.json  postCreateCommand.sh
deployment/: database.yaml  deployment.yaml  django-config.yaml  kustomization.yaml  nginx-config.yaml
helm/: Chart.yaml  values.yaml
mysite/: settings.py  urls.py  views.py
polls/: models.py  schema.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_alter_question_id.py
